# multimodal_classification_vae

./: .gitignore  README.md  draft.py  environment.yml  houston_config.py  infer_trento.py  open_pkl.py  pyproject.toml  setup.cfg  setup.py  simu_trento.py  test.py  trento_config.py  trento_utils.py  utility_functions.py  visualize_results.py
mcvae/: __init__.py
mcvae/architectures/: __init__.py  distributions.py  encoders.py  mvae.py  regular_modules.py  trento_encoders.py  trento_vae.py  vae.py
mcvae/dataset/: __init__.py  houston.py  houston_multimodal.py  houston_patch.py  trento.py  trento_multimodal.py  trento_multimodal_patch.py  trento_patch.py
mcvae/inference/: __init__.py  mnist_trainer.py  mvae_train.py  mvae_trainer.py  trento_trainer.py  vae_trainer.py
mcvae/models/: __init__.py  regular_modules.py  (+3 more)
scripts/: analysis.py  data_distributions.py  heterophil_matrices.txt  heterophili.py  houston_config.py  houston_distributions.py  houston_multimodal_config.py  houston_patch_config.py  houston_results.py  hsi.py  lidar.py  metrics.py  other_classifiers.py  output_analysis.py  play.py  plot_metrics.py  print_hsi.py  print_lidar.py  results_analysis.py  rgbaer.py  save_thesis_figs.py  simu_M1M2.py  simu_SVM_RF.py  simu_multi-M1M2.py  simu_mvae.py  simu_vae.py  timeplots.py  trento_analysis.py  trento_config.py  trento_distributions.py  trento_multimodal_config.py  trento_multimodal_patch_config.py  trento_patch_config.py  trento_results.py  uncertainty_game.py  visualise_results.py  visualize_houston.py  visualize_results.py  visualize_results_plain.py
(+3 files in other folders)
