[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mcvae"
version = "0.0.1"
authors = [
  { name="Pigi Lozou", email="piyilozou@gmail.com" },
]
dependencies = [
    "numpy",
    "torch",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "tqdm",
    "statsmodels",
    "arviz"
]


description = "Multimodal Classification with Variational Autoencoder"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pioui/multimodal_classification_vae"
"Bug Tracker" = "https://github.com/pioui/multimodal_classification_vae/issues"