[metadata]
name = Multimodal_Classification_VAE
version = 0.0.1
author=Pigi Lozou
author_email='piyilozou@gmail.com'
description="Multimodal Classification with Variational Autoencoder"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pioui/multimodal_classification_vae
project_urls =
    Bug Tracker = https://github.com/pioui/multimodal_classification_vae/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.6

[options.packages.find]
where = mcvae